ags (3.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented getter and setter functions of properties
	* implemented meta widget of AgsNotationEditor
	* TODO:JK: implemented meta widget of AgsAutomationEditor
	* TODO:JK: implemented meta widget of AgsWaveEditor
	* TODO:JK: implemented AgsOnlineHelpWindow
	* implemented accoustic feedback of ags-recall-dssi
	* implemented accoustic feedback of ags-recall-lv2
	* TODO:JK: refactored ags-recall-dssi
	* TODO:JK: refactored ags-recall-lv2
	* TODO:JK: refactored GSequencer to allow single window mode
	* fixed ref-count of AgsRecallDssi:count-beats-audio-run
	* fixed AgsAutomationEdit not shown again

ags (3.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced UTF-8 character sequence from build files
	* added missing parantheses in configure.ac
	* wiped m4 directory and recreated it

ags (3.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved unit-tests to call ags_priority_load_defaults()

ags (3.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken WebKit2Gtk-4.0 configure

ags (3.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented disable realtime priorities by AgsPriority

ags (3.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added --enable-single-docdir configure option to meet FreeBSD demands

ags (3.0.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added GObject-Introspection annotations for GList type properties
	* improved online help browser to respect --docdir configure parameter
	* fixes to WASAPI backend
	* fixes to CoreAudio backend

ags (3.0.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am missing DESTDIR

ags (3.0.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am wrong destination directory variables of gtk-doc

ags (3.0.5)
